# enterprise-homelab-boilerplate

./: .coverage  .env.template  .flake8  .gitignore  CLEANUP_SUMMARY.md  COMPLETED.md  Dockerfile.test  Makefile  README.md  SECURITY.md  StarterGuide.md  WARP.md  bootstrap.sh  config.yaml  debug_compose.py  docker-compose.yml  docusaurus.config.js  generate-compose.sh  generate-infrastructure.py  install.sh  labctl  pyproject.toml  test-config.yaml  test_dockerfile.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  python-package.yml
cli/labctl/: __init__.py
cli/labctl/cli/: __init__.py  main.py
cli/labctl/cli/commands/: __init__.py  build_cmd.py  config_cmd.py  deploy_cmd.py  doctor_cmd.py  init_cmd.py  logs_cmd.py  migrate_cmd.py  status_cmd.py  stop_cmd.py  validate_cmd.py
cli/labctl/cli/wizard/: __init__.py  orchestrator.py  prompter.py  traefik_flow.py
cli/labctl/core/: __init__.py  compose.py  config.py  config_writer.py  exceptions.py  health.py  secrets.py  validation.py
cli/labctl/core/services/: __init__.py  deps.py  schema.py
config/: config.example.yaml  config.yaml.v1.backup
config/services/: README.md  bookstack.yaml  gitlab.yaml  glance.yaml  grafana.yaml  jenkins.yaml  mongodb.yaml  n8n.yaml  nextcloud.yaml  nginx-proxy-manager.yaml  pihole.yaml  postgresql.yaml  prometheus.yaml  redis.yaml  traefik.yaml  uptime-kuma.yaml  vaultwarden.yaml
config/services-v2/: bookstack.yaml  gitlab.yaml  glance.yaml  grafana.yaml  jenkins.yaml  mongodb.yaml  monitoring.yaml  n8n.yaml  nextcloud.yaml  nginx_proxy_manager.yaml  pihole.yaml  postgresql.yaml  prometheus.yaml  redis.yaml  traefik.yaml  uptime_kuma.yaml  vaultwarden.yaml
config/services-v2-broken/: SCHEMA.md  monitoring.yaml
docs/: SERVICES.md  architecture.md  customizing.md
docs/services/: README.md  bookstack.md  gitlab.md  glance.md  grafana.md  jenkins.md  mongodb.md  monitoring.md  n8n.md  nextcloud.md  nginx_proxy_manager.md  pihole.md  postgresql.md  prometheus.md  redis.md  traefik.md  uptime_kuma.md  vaultwarden.md
examples/: glance.yml  prometheus.yml
scripts/: convert_services_v1_to_v2.py  update-warp-cli.sh
scripts/bootstrap/: check_prereqs.sh
tests/: test_compose.py  test_doctor.py  test_init.py  test_secrets.py  test_services_v2.py
