[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labctl"
version = "2.0.0"
description = "Enterprise Home Lab Infrastructure Management CLI"
readme = "README.md"
authors = [
    {name = "Home Lab Community", email = "support@homelab.community"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["docker", "compose", "infrastructure", "monitoring", "security", "devops"]

dependencies = [
    "typer[all]>=0.26.7",
    "rich>=15.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "jinja2>=3.1.6",
    "requests>=2.34.2",
    "click>=8.4.1",
    "python-dotenv>=1.2.2",
    "cryptography>=49.0.0",
    "jsonschema>=4.26.0",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "black>=26.5.1",
    "isort>=8.0.1",
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
]

[project.urls]
Homepage = "https://github.com/patel5d2/enterprise-homelab-boilerplate"
Documentation = "https://github.com/patel5d2/enterprise-homelab-boilerplate#readme"
Repository = "https://github.com/patel5d2/enterprise-homelab-boilerplate.git"
Issues = "https://github.com/patel5d2/enterprise-homelab-boilerplate/issues"

[project.scripts]
labctl = "labctl.cli.main:app"

[tool.setuptools]
package-dir = {"" = "cli"}

[tool.setuptools.packages.find]
where = ["cli"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
# B404/B603/B607: this CLI wraps docker/docker-compose via subprocess with
# argument lists (never shell=True); these informational findings are accepted.
# B105: flags string literals such as "password" used as secret *type names*
# and enum values — no secret values are hardcoded in the codebase.
skips = ["B404", "B603", "B607", "B105"]